--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@babel/preset-env": "^7.6.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "pug": "^2.0.4"
   },
   "scripts": {
